--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Job Notification Tracker — Built on the KodNest Premium Design System." />
+  <meta name="description"
+    content="Job Notification Tracker — Precision-matched job discovery delivered daily. Built on KodNest Premium Design System." />
   <title>Job Notification Tracker — KodNest</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@400;700&display=swap"
     rel="stylesheet" />
 
   <!-- Design System -->
@@ -26,7 +27,7 @@
     <!-- TOP BAR                                      -->
     <!-- ============================================ -->
     <header class="top-bar">
-      <div class="top-bar__project">Job Notification Tracker</div>
+      <a href="#/" class="top-bar__project" id="logoLink">Job Notification Tracker</a>
 
       <!-- Hamburger (mobile only) -->
       <button class="hamburger-btn" id="hamburgerBtn" aria-label="Toggle navigation" aria-expanded="false">
@@ -50,39 +51,229 @@
     <!-- ============================================ -->
     <main class="route-container">
 
+      <!-- ──── LANDING PAGE (/) ──── -->
+      <section class="route-page route-page--landing" id="route-landing" data-route-page="landing">
+        <div class="hero">
+          <div class="hero__badge">Precision Job Discovery</div>
+          <h1 class="hero__headline">Stop Missing<br />The Right Jobs.</h1>
+          <p class="hero__subtext">
+            Precision-matched job discovery delivered daily at 9AM.<br />
+            Filter noise. Surface signal. Land the role that fits.
+          </p>
+          <a href="#/settings" class="btn btn-primary hero__cta" id="ctaBtn">
+            Start Tracking
+            <span class="hero__cta-arrow">&rarr;</span>
+          </a>
+          <p class="hero__footnote">No spam. No noise. Just clarity.</p>
+        </div>
+      </section>
 
-
-      <!-- Dashboard -->
+      <!-- ──── DASHBOARD ──── -->
       <section class="route-page" id="route-dashboard" data-route-page="dashboard">
-        <h1>Dashboard</h1>
-        <p class="subtext">This section will be built in the next step.</p>
+        <div class="page-shell">
+          <div class="page-header">
+            <h1>Dashboard</h1>
+            <p class="subtext">Your matched jobs, reviewed and ready.</p>
+          </div>
+          <div class="empty-state">
+            <div class="empty-state__icon">
+              <svg width="48" height="48" fill="none" viewBox="0 0 48 48">
+                <rect x="6" y="10" width="36" height="28" rx="4" stroke="currentColor" stroke-width="2" />
+                <path d="M6 18h36" stroke="currentColor" stroke-width="2" />
+                <rect x="12" y="24" width="10" height="3" rx="1.5" fill="currentColor" opacity="0.3" />
+                <rect x="12" y="30" width="16" height="3" rx="1.5" fill="currentColor" opacity="0.15" />
+              </svg>
+            </div>
+            <h3 class="empty-state__title">No jobs yet</h3>
+            <p class="empty-state__body">In the next step, you will load a realistic dataset.<br />Matched roles will
+              appear here, ready for review.</p>
+          </div>
+        </div>
       </section>
 
-      <!-- Saved -->
+      <!-- ──── SAVED ──── -->
       <section class="route-page" id="route-saved" data-route-page="saved">
-        <h1>Saved</h1>
-        <p class="subtext">This section will be built in the next step.</p>
+        <div class="page-shell">
+          <div class="page-header">
+            <h1>Saved Jobs</h1>
+            <p class="subtext">Bookmarked roles you want to revisit.</p>
+          </div>
+          <div class="empty-state">
+            <div class="empty-state__icon">
+              <svg width="48" height="48" fill="none" viewBox="0 0 48 48">
+                <path d="M14 8h20a2 2 0 0 1 2 2v30l-12-8-12 8V10a2 2 0 0 1 2-2z" stroke="currentColor" stroke-width="2"
+                  stroke-linejoin="round" />
+              </svg>
+            </div>
+            <h3 class="empty-state__title">Nothing saved yet</h3>
+            <p class="empty-state__body">When you find a role worth revisiting, save it here.<br />Your shortlist stays
+              clean and focused.</p>
+          </div>
+        </div>
       </section>
 
-      <!-- Digest -->
+      <!-- ──── DIGEST ──── -->
       <section class="route-page" id="route-digest" data-route-page="digest">
-        <h1>Digest</h1>
-        <p class="subtext">This section will be built in the next step.</p>
+        <div class="page-shell">
+          <div class="page-header">
+            <h1>Daily Digest</h1>
+            <p class="subtext">Your 9 AM briefing — curated, never cluttered.</p>
+          </div>
+          <div class="empty-state">
+            <div class="empty-state__icon">
+              <svg width="48" height="48" fill="none" viewBox="0 0 48 48">
+                <circle cx="24" cy="24" r="16" stroke="currentColor" stroke-width="2" />
+                <path d="M24 14v10l7 4" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </div>
+            <h3 class="empty-state__title">No digest generated</h3>
+            <p class="empty-state__body">Your daily summary will appear here once<br />preferences are configured and
+              data is loaded.</p>
+          </div>
+        </div>
       </section>
 
-      <!-- Settings -->
+      <!-- ──── SETTINGS ──── -->
       <section class="route-page" id="route-settings" data-route-page="settings">
-        <h1>Settings</h1>
-        <p class="subtext">This section will be built in the next step.</p>
+        <div class="page-shell page-shell--narrow">
+          <div class="page-header">
+            <h1>Tracking Preferences</h1>
+            <p class="subtext">Tell us what you're looking for. We'll handle the rest.</p>
+          </div>
+
+          <form class="settings-form" id="settingsForm" onsubmit="return false;">
+
+            <!-- Role Keywords -->
+            <div class="form-section">
+              <div class="input-group">
+                <label for="roleKeywords">Role Keywords</label>
+                <input type="text" id="roleKeywords" class="input"
+                  placeholder="e.g. Frontend Engineer, React Developer, UI Architect" />
+                <span class="input-hint">Comma-separated. We'll match titles, descriptions, and tags.</span>
+              </div>
+            </div>
+
+            <!-- Preferred Locations -->
+            <div class="form-section">
+              <div class="input-group">
+                <label for="preferredLocations">Preferred Locations</label>
+                <input type="text" id="preferredLocations" class="input"
+                  placeholder="e.g. Bangalore, Mumbai, Hyderabad" />
+                <span class="input-hint">Comma-separated cities. Leave blank for all locations.</span>
+              </div>
+            </div>
+
+            <!-- Work Mode -->
+            <div class="form-section">
+              <div class="input-group">
+                <label>Work Mode</label>
+                <div class="radio-group">
+                  <label class="radio-label">
+                    <input type="radio" name="workMode" value="remote" />
+                    <span class="radio-custom"></span>
+                    <span>Remote</span>
+                  </label>
+                  <label class="radio-label">
+                    <input type="radio" name="workMode" value="hybrid" />
+                    <span class="radio-custom"></span>
+                    <span>Hybrid</span>
+                  </label>
+                  <label class="radio-label">
+                    <input type="radio" name="workMode" value="onsite" />
+                    <span class="radio-custom"></span>
+                    <span>On-site</span>
+                  </label>
+                  <label class="radio-label">
+                    <input type="radio" name="workMode" value="any" checked />
+                    <span class="radio-custom"></span>
+                    <span>Any</span>
+                  </label>
+                </div>
+              </div>
+            </div>
+
+            <!-- Experience Level -->
+            <div class="form-section">
+              <div class="input-group">
+                <label for="experienceLevel">Experience Level</label>
+                <select id="experienceLevel" class="input select">
+                  <option value="" disabled selected>Select your level</option>
+                  <option value="intern">Intern / Fresher</option>
+                  <option value="junior">Junior (0–2 years)</option>
+                  <option value="mid">Mid-level (2–5 years)</option>
+                  <option value="senior">Senior (5–8 years)</option>
+                  <option value="lead">Lead / Staff (8+ years)</option>
+                </select>
+              </div>
+            </div>
+
+            <!-- Save Button -->
+            <div class="form-actions">
+              <button type="submit" class="btn btn-primary" id="savePrefsBtn">Save Preferences</button>
+              <span class="form-actions__hint">Preferences are not saved yet — logic will be added in the next
+                step.</span>
+            </div>
+
+          </form>
+        </div>
       </section>
 
-      <!-- Proof -->
+      <!-- ──── PROOF ──── -->
       <section class="route-page" id="route-proof" data-route-page="proof">
-        <h1>Proof</h1>
-        <p class="subtext">This section will be built in the next step.</p>
+        <div class="page-shell">
+          <div class="page-header">
+            <h1>Proof of Work</h1>
+            <p class="subtext">Artifacts demonstrating what was built, tested, and shipped.</p>
+          </div>
+          <div class="proof-grid">
+            <div class="proof-card">
+              <div class="proof-card__icon">
+                <svg width="28" height="28" fill="none" viewBox="0 0 28 28">
+                  <rect x="3" y="3" width="22" height="22" rx="3" stroke="currentColor" stroke-width="1.5" />
+                  <path d="M8 14l4 4 8-8" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+              </div>
+              <h4>UI Built</h4>
+              <p class="text-sm text-muted">Design system, navigation, and page layouts verified.</p>
+            </div>
+            <div class="proof-card">
+              <div class="proof-card__icon">
+                <svg width="28" height="28" fill="none" viewBox="0 0 28 28">
+                  <circle cx="14" cy="14" r="11" stroke="currentColor" stroke-width="1.5" />
+                  <path d="M14 8v6l4 2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
+                </svg>
+              </div>
+              <h4>Logic Pending</h4>
+              <p class="text-sm text-muted">Matching and filtering will be implemented in the next step.</p>
+            </div>
+            <div class="proof-card">
+              <div class="proof-card__icon">
+                <svg width="28" height="28" fill="none" viewBox="0 0 28 28">
+                  <path d="M4 22l6-6m0 0l4-10 4 10m-8 0h8" stroke="currentColor" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+              </div>
+              <h4>Tests Pending</h4>
+              <p class="text-sm text-muted">Test coverage will follow once core logic is complete.</p>
+            </div>
+            <div class="proof-card">
+              <div class="proof-card__icon">
+                <svg width="28" height="28" fill="none" viewBox="0 0 28 28">
+                  <path
+                    d="M14 4v4m0 16v-4m10-6h-4M8 14H4m17.07-7.07l-2.83 2.83M11.76 16.24l-2.83 2.83m14.14 0l-2.83-2.83M11.76 11.76L8.93 8.93"
+                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
+                </svg>
+              </div>
+              <h4>Deploy Pending</h4>
+              <p class="text-sm text-muted">Deployment pipeline will be configured after verification.</p>
+            </div>
+          </div>
+        </div>
       </section>
 
-      <!-- 404 — Not Found -->
+      <!-- ──── 404 — Not Found ──── -->
       <section class="route-page route-page--not-found" id="route-not-found" data-route-page="not-found">
         <div class="not-found__icon">&#128683;</div>
         <h1>Page Not Found</h1>
