--- a/index.html
+++ b/index.html
@@ -199,23 +199,95 @@
 
       <!-- ──── DIGEST ──── -->
       <section class="route-page" id="route-digest" data-route-page="digest">
-        <div class="page-shell">
+        <div class="page-shell page-shell--narrow">
           <div class="page-header">
             <h1>Daily Digest</h1>
             <p class="subtext">Your 9 AM briefing — curated, never cluttered.</p>
           </div>
-          <div class="empty-state">
-            <div class="empty-state__icon">
-              <svg width="48" height="48" fill="none" viewBox="0 0 48 48">
-                <circle cx="24" cy="24" r="16" stroke="currentColor" stroke-width="2" />
-                <path d="M24 14v10l7 4" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+
+          <!-- No-Preferences Blocking State -->
+          <div class="digest-block" id="digestNoPrefs" style="display: none;">
+            <div class="empty-state">
+              <div class="empty-state__icon">
+                <svg width="48" height="48" fill="none" viewBox="0 0 48 48">
+                  <circle cx="24" cy="24" r="16" stroke="currentColor" stroke-width="2" />
+                  <path d="M24 14v10l7 4" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+              </div>
+              <h3 class="empty-state__title">Set preferences to generate a personalized digest.</h3>
+              <p class="empty-state__body">Head to <a href="#/settings"
+                  style="color:var(--color-accent);font-weight:600;">Settings</a> and configure your role keywords,
+                locations, and skills first.</p>
+            </div>
+          </div>
+
+          <!-- Generate Button -->
+          <div class="digest-generate" id="digestGenerate" style="display: none;">
+            <button class="btn btn-primary" id="generateDigestBtn">
+              <svg width="18" height="18" fill="none" viewBox="0 0 18 18" style="margin-right:6px;">
+                <circle cx="9" cy="9" r="7" stroke="currentColor" stroke-width="1.5" />
+                <path d="M9 5v4l3 2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
                   stroke-linejoin="round" />
               </svg>
-            </div>
-            <h3 class="empty-state__title">No digest generated</h3>
-            <p class="empty-state__body">Your daily summary will appear here once<br />preferences are configured and
-              data is loaded.</p>
+              Generate Today's 9AM Digest (Simulated)
+            </button>
+            <p class="digest-sim-note">Demo Mode: Daily 9AM trigger simulated manually.</p>
           </div>
+
+          <!-- Digest Email Card -->
+          <div class="digest-card" id="digestCard" style="display: none;">
+            <div class="digest-card__header">
+              <h2 class="digest-card__title">Top 10 Jobs For You — 9AM Digest</h2>
+              <p class="digest-card__date" id="digestDate"></p>
+            </div>
+
+            <div class="digest-card__body" id="digestBody">
+              <!-- Digest job rows rendered by JS -->
+            </div>
+
+            <div class="digest-card__footer">
+              <p>This digest was generated based on your preferences.</p>
+              <p class="digest-sim-note" style="margin-top:8px;">Demo Mode: Daily 9AM trigger simulated manually.</p>
+            </div>
+
+            <!-- Action Buttons -->
+            <div class="digest-actions">
+              <button class="btn btn-ghost btn-sm" id="copyDigestBtn">
+                <svg width="14" height="14" fill="none" viewBox="0 0 14 14" style="margin-right:4px;">
+                  <rect x="4" y="4" width="8" height="8" rx="1.5" stroke="currentColor" stroke-width="1.3" />
+                  <path d="M10 4V2.5A1.5 1.5 0 0 0 8.5 1h-6A1.5 1.5 0 0 0 1 2.5v6A1.5 1.5 0 0 0 2.5 10H4"
+                    stroke="currentColor" stroke-width="1.3" />
+                </svg>
+                Copy Digest to Clipboard
+              </button>
+              <button class="btn btn-ghost btn-sm" id="emailDigestBtn">
+                <svg width="14" height="14" fill="none" viewBox="0 0 14 14" style="margin-right:4px;">
+                  <rect x="1" y="3" width="12" height="8" rx="1.5" stroke="currentColor" stroke-width="1.3" />
+                  <path d="M1 4l6 4 6-4" stroke="currentColor" stroke-width="1.3" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+                Create Email Draft
+              </button>
+            </div>
+          </div>
+
+          <!-- No-Matches State (shown after generation when 0 matches) -->
+          <div class="digest-block" id="digestNoMatches" style="display: none;">
+            <div class="empty-state">
+              <div class="empty-state__icon">
+                <svg width="48" height="48" fill="none" viewBox="0 0 48 48">
+                  <circle cx="24" cy="24" r="16" stroke="currentColor" stroke-width="2" />
+                  <path d="M18 28s2.5-4 6-4 6 4 6 4" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                  <circle cx="18" cy="20" r="1.5" fill="currentColor" />
+                  <circle cx="30" cy="20" r="1.5" fill="currentColor" />
+                </svg>
+              </div>
+              <h3 class="empty-state__title">No matching roles today.</h3>
+              <p class="empty-state__body">Check again tomorrow or adjust your preferences for broader coverage.</p>
+            </div>
+          </div>
+
         </div>
       </section>
 
